# InstinctiveDiffuse

./: .gitignore  README.md  app.py  app_nft.py  ckpt.py  core.py  desktop_app.py  engine-a.py  engine.py  engine_run.py  fix_broken_images.py  flask_core.py  prompts.txt  pyproject.toml
SG_UI/: __init__.py  app.py
baseline/: __init__.py  baseline.py  baseline_utils.py  core.py  notebook.ipynb  tools.py
config/: HyperParameters.yaml  hyper-parameters.yaml  model_index.json  progan-hyper-parameters.yaml
core/: discriminator.py  generator.py  train.py
engine/: commons.py  intels.py
instinctive_diffuse/: __init__.py
instinctive_diffuse/baseline/: __init__.py  tools.py
instinctive_diffuse/interface/: __init__.py
instinctive_diffuse/interface/gradio/: g_interface.py
instinctive_diffuse/interface/gradio_interface/: g_interface.py
instinctive_diffuse/modules/: models.py
instinctive_diffuse/sampler/: sampler_config.py  stable_diffusion_pipeline.py  text_to_image_sampler.py
instinctive_diffuse/utils/: infor.py
logs/gan1/: events.out.tfevents.1673523474.DESKTOP-OB0QB6D.18420.0  events.out.tfevents.1673523556.DESKTOP-OB0QB6D.20376.0
modules/: jax_modules.py  models.py  models_utils.py  modules.py  pipeline.py  pipeline_utils.py
src/instinctive_diffuse/baseline/: baseline_utils.py
src/instinctive_diffuse/interface/: statics.py
src/instinctive_diffuse/sampler/: __init__.py  (+2 more)
test/: gradio_launch.py
tools/: pro_gan.py  refa-pro-G.py
train/: README.md  test.py  test_vpa_engine.py  test_vsa_engine.py
utils/: load.py  utils.py  utils_a_engine.py
(+4 files in other folders)
